--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,9 @@ jobs:
 
   unit-test: 
     runs-on: ubuntu-latest    
+    needs: build
     steps:
       - uses: actions/checkout@v2
       - name: pruebas unitarias
         run: npm run test
+    
