--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,6 +3,7 @@ name: pipeline test
 on:
   push:
     branches:
+      - master
       - feature/*
     
 
@@ -18,15 +19,17 @@ jobs:
     steps: 
       - uses: actions/checkout@v2
       - name: printhola
-        run: echo 'hola $NAME_ENVIRONMENT'
+        run: echo 'hola ${NAME_ENVIRONMENT}'
         env:
           NAME_ENVIRONMENT: ${{ env.titulo }}
 
   unit-test: 
     runs-on: ubuntu-latest    
     needs: build
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
       - name: pruebas unitarias
         run: npm run test
+    
     
